<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cheesetexture">

    <EditText
        android:id="@+id/recipeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/hintnamerecipe"
        android:layout_alignParentTop="true"
        android:textColor="@color/blue"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spinnerKategorija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/llspinnerimage"
        android:layout_alignRight="@+id/recipeET"
        android:layout_marginTop="-37dp"
        android:entries="@array/all_category_arrays"
        />

    <LinearLayout
        android:id="@+id/llspinnerimage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/recipeET"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_photo_bt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/divider_horizontal_bright"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/photo2" />

    </LinearLayout>

    <Button
        android:id="@+id/add_ingrediens_bt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llspinnerimage"
        android:layout_marginTop="40dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:gravity="center"
        android:text="@string/adding"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textStyle="italic"
        android:textSize="20dp" />

    <Button
        android:id="@+id/add_direction_of_recipe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_ingrediens_bt"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:gravity="center"
        android:text="@string/adddir"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/blue"
        android:textSize="20dp" />




</RelativeLayout>